--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>My test page</title>
   </head>
   <body>
+      <label>Hello Image</label>
     <img src="images/firefox-icon.png" alt="My test image">
   </body>
 </html> 
