--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My test page</title>
   </head>
   <body>
-      <h1>Hello Image</h1>
+      <h1>Hello Images</h1>
     <img src="images/firefox-icon.png" alt="My test image">
   </body>
 </html> 
