--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>My test page</title>
-  </head>
-  <body>
-      <h1>Hello Images</h1>
-    <img src="images/firefox-icon.png" alt="My test image">
-  </body>
-</html> 
+
+<head>
+  <meta charset="utf-8">
+  <title>My test page</title>
+</head>
+
+<body>
+  <h1>Hello Images</h1>
+  <img src="images/firefox-icon.png" alt="My test image">
+  <p>This is My first Paragraph</p>
+  <ul>
+    <li>HTML</li>
+    <ol>
+      <li>ELEMENT</li>
+      <li>TAGS</li>
+    </ol>
+    <li>CSS</li>
+    <li>JAVASCRIPT</li>
+  </ul>
+
+<h2>end of list</h2>
+
+</body>
+
+</html>
