--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>My test page</title>
+  <title>PK test page</title>
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
-  <h1>Hello Images</h1>
+  <h1>Hello Learning</h1>
   <img src="images/firefox-icon.png" alt="My test image">
   <p>This is My first Paragraph</p>
   <ul>
@@ -20,7 +21,8 @@
     <li>JAVASCRIPT</li>
   </ul>
 
-<h2>end of list</h2>
+<p>end of list</p>
+<a href="http://www.google.com">Google</a>
 
 </body>
 
