--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 
 <head>
   <meta charset="utf-8">
-  <title>PK test page</title>
+  <title>Mozilla Page</title>
   <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Epilogue&display=swap">
 </head>
 
 <body>
-  <h1>Hello Learning</h1>
+  <h1>Mozilla is Cool</h1>
   <img src="images/firefox-icon.png" alt="My test image">
-  <p>This is My first Paragraph</p>
+  <p>Add the following lines (shown below), replacing the font-family assignment with your font-family 
+    selection from What will your website look like?. The property font-family refers to the 
+    font(s) you want to use for text. This rule defines a global base font and font size for the
+     whole page. Since is the parent element of the whole page, all elements inside it inherit the same font-size and font-family</p>
   <ul>
+
     <li>HTML</li>
     <ol>
       <li>ELEMENT</li>
@@ -21,8 +26,11 @@
     <li>JAVASCRIPT</li>
   </ul>
 
-<p>end of list</p>
-<a href="http://www.google.com">Google</a>
+<p>Now let's set font sizes for elements that will have text inside the HTML body (<h1>, <li>, and <p>). We'll also center the heading. Finally,
+   let's expand the second ruleset (below) with settings for line height and letter spacing to make body content more readable.</p>
+<p><a href="http://www.google.com">Google</a>, LLC is an American multinational technology company that specializes 
+  in Internet-related services and products, which include online advertising technologies, a search engine, cloud computing, software, and hardware.</p>
+  
 
 </body>
 
