--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
   <p><a href="http://www.google.com">Google</a>, LLC is an American multinational technology company that specializes
     in Internet-related services and products, which include online advertising technologies, a search engine, cloud
     computing, software, and hardware.</p>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
